# WebHash

./: .gitignore  README.md  WebHash.cabal  stack.yaml
data/: bcomp.v  file.txt  metoda.doc
src/: Hash.hs  Lib.hs
static/: main.html  main.js
